# schnorr-pcf-rust

./: Cargo.toml  build.rs
benches/: signing.rs
src/: dl_pcf.rs  gen_prime.rs  lib.rs  main.rs  ntl_wrapper.cpp  schnorr_2p.rs
