[package]
name = "pcf-threshold-schnorr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3"
rand = "0.8.5"
sha2 = "0.10"
sha3 = "0.10"
subtle = "2.5"
once_cell = "1.17"

[dependencies.rug]
version = "1.19"
default-features = false
features = ["integer"]
