[package]
name = "pcf-threshold-schnorr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "^0.7.2"
curve25519-dalek = { version = "^4.0.0-rc.2", features = ["rand_core"] }
ed25519-dalek = "^2.0.0-rc.2"
gmp-mpfr-sys = "^1.5.2"
num-traits = "0.2.15"
once_cell = "1.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
rug = { version = "1.19", default-features = false, features = ["integer", "num-traits"] }
sha2 = "0.10"
sha3 = "0.10"
subtle = "2.5"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "signing"
harness = false

[profile.release]
opt-level = 3
debug = true
